# media-file-date-fixer

./: .gitignore  Cargo.toml  LICENSE  README.md  mac_appmfdf
bash/: readme.md  release.sh
bat/: debug_build.bat  readme.md  release_build.bat
ffi_lib/: Cargo.toml
ffi_lib/src/: lib.rs
mac_app/: readme.md
mac_app/mfdf/: libmfdf_ffi.dylib
mac_app/mfdf/Media File Date Fixer/: ContentView.swift  Media_File_Date_FixerApp.swift
mac_app/mfdf/Media File Date FixerTests/: Media_File_Date_FixerTests.swift
mac_app/mfdf/Media File Date FixerUITests/: Media_File_Date_FixerUITests.swift  Media_File_Date_FixerUITestsLaunchTests.swift
mac_app/mfdf/mfdf/: ContentView.swift  libmfdf.dylib  mfdfApp.swift
mac_app/mfdf/mfdf.xcodeproj/: project.pbxproj
mac_app/mfdf/mfdf.xcodeproj/project.xcworkspace/xcuserdata/bobosola.xcuserdatad/: UserInterfaceState.xcuserstate
mac_app/mfdf/mfdf.xcodeproj/xcshareddata/xcschemes/: mfdf 1.xcscheme  mfdf.xcscheme
mac_app/mfdf/mfdfTests/: mfdfTests.swift
mac_app/mfdf/mfdfUITests/: mfdfUITests.swift  mfdfUITestsLaunchTests.swift
mac_app/scripts/: codesign.sh  release.sh
mfdf/: Cargo.toml
mfdf/src/: lib.rs  main.rs
src/: lib.rs  main.rs  types.rs
win_app/: mfdf.sln  readme.md
win_app/WapProjTemplate2/: Package.appxmanifest  WapProjTemplate2.wapproj
win_app/bat/: debug_build.bat  release_build.bat
win_app/mfdf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  app.manifest  mfdf.csproj
win_app/mfdf/Properties/: launchSettings.json
(+1 files in other folders)
