[workspace]
members = ["mfdf", "ffi_lib"]
exclude = ["bash", "mac_app", "win_app"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Bob Osola <bobosola@gmail.com>"]
description = "Retrieves media files dates lost during copying from metadata"

[patch.crates-io]
nom-exif = { path = "../nom-exif" }
